; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_png_col_from_pass_col.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_png_col_from_pass_col.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @png_col_from_pass_col to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @png_col_from_pass_col(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %30 [
    i32 0, label %7
    i32 1, label %10
    i32 2, label %14
    i32 3, label %17
    i32 4, label %21
    i32 5, label %24
    i32 6, label %28
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = mul nsw i32 %8, 8
  store i32 %9, i32* %3, align 4
  br label %32

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = mul nsw i32 %11, 8
  %13 = add nsw i32 %12, 4
  store i32 %13, i32* %3, align 4
  br label %32

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = mul nsw i32 %15, 4
  store i32 %16, i32* %3, align 4
  br label %32

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = mul nsw i32 %18, 4
  %20 = add nsw i32 %19, 2
  store i32 %20, i32* %3, align 4
  br label %32

21:                                               ; preds = %2
  %22 = load i32, i32* %4, align 4
  %23 = mul nsw i32 %22, 2
  store i32 %23, i32* %3, align 4
  br label %32

24:                                               ; preds = %2
  %25 = load i32, i32* %4, align 4
  %26 = mul nsw i32 %25, 2
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %3, align 4
  br label %32

28:                                               ; preds = %2
  %29 = load i32, i32* %4, align 4
  store i32 %29, i32* %3, align 4
  br label %32

30:                                               ; preds = %2
  br label %31

31:                                               ; preds = %30
  store i32 255, i32* %3, align 4
  br label %32

32:                                               ; preds = %31, %28, %24, %21, %17, %14, %10, %7
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
